OSU (sketchpad) and oj-tex

--- a/sahuang-oj-tex/electricBox.tex
+++ b/sahuang-oj-tex/electricBox.tex
@@ -227,13 +227,13 @@ Sample Input 4 & Sample Output 4\\
 \begin{center}
 \centering
 \begin{tikzpicture}[scale=3]
-    \draw[step=.5cm,draw=black!20] (0,0) grid (2,3);
-    \draw (0,0) -- (0,3);
-    \draw (2,0) -- (2,3);
-    \fill[fill=black!10] (1,1.5) circle (1cm);
-    \node at (2,0) [label=below:200] {};
-    \node at (1,0) [label=below:100] {};
-    \node at (0,0) [label=below:0] {};
+    \draw[step=.5cm,draw=black!20] (0,0) grid (3,2);
+    \draw (0,0) -- (3,0);
+    \draw (0,2) -- (3,2);
+    \fill[fill=black!10] (1.5,1) circle (1cm);
+    \node at (0,2) [label=left:200] {};
+    \node at (0,1) [label=left:100] {};
+    \node at (0,0) [label=left:0] {};
 \end{tikzpicture}
 \end{center}
 
